Prioritize FIREBASE_SERVICE_ACCOUNT_BASE64 in FirebaseConfig for Render