@@ -22,17 +22,17 @@ import java.nio.file.Paths;
 import java.util.Base64;
 
 /**
- * Firebase Admin SDK Configuration — Phase 3B.
+ * Firebase Admin SDK Configuration — Production & Local Development.
  *
  * <p>Initializes FirebaseApp and exposes the {@link FirebaseMessaging} bean.
- * Supports loading credentials securely with the following priority:
+ * Credentials Priority:
  * <ol>
- *   <li>{@code FIREBASE_SERVICE_ACCOUNT_BASE64} Base64 environment variable (Recommended for Render/Production).</li>
- *   <li>{@code FIREBASE_SERVICE_ACCOUNT_JSON} raw JSON environment variable.</li>
- *   <li>{@code FIREBASE_SERVICE_ACCOUNT_PATH} file path (Local development / mounted secret file).</li>
- *   <li>Classpath fallback at {@code firebase/firebase-service-account.json} (Local development).</li>
+ *   <li>{@code FIREBASE_SERVICE_ACCOUNT_BASE64} (Highest Priority - Production / Render)</li>
+ *   <li>{@code FIREBASE_SERVICE_ACCOUNT_JSON} (Optional Legacy Fallback)</li>
+ *   <li>Local file at {@code FIREBASE_SERVICE_ACCOUNT_PATH}</li>
+ *   <li>Local classpath file at {@code firebase/firebase-service-account.json}</li>
  * </ol>
- * Sensitive credentials, Base64 strings, and private keys are NEVER logged.</p>
+ * Secrets, private keys, and Base64 tokens are NEVER logged.</p>
  */
 @Configuration
 @ConditionalOnProperty(name = "firebase.enabled", havingValue = "true", matchIfMissing = false)
@@ -54,7 +54,7 @@ public class FirebaseConfig {
     @Bean
     public FirebaseMessaging firebaseMessaging() throws IOException {
         log.info("[Firebase] ═══════════════════════════════════════════════");
-        log.info("[Firebase] Initializing Firebase Admin SDK — Phase 3B");
+        log.info("[Firebase] Initializing Firebase Admin SDK");
 
         GoogleCredentials credentials = resolveCredentials();
 
@@ -69,9 +69,9 @@ public class FirebaseConfig {
 
         if (resolvedProjectId != null && !resolvedProjectId.isBlank()) {
             optionsBuilder.setProjectId(resolvedProjectId);
-            log.info("[Firebase] Firebase project ID = {}", resolvedProjectId);
+            log.info("[Firebase] Firebase project ID: {}", resolvedProjectId);
         } else {
-            log.info("[Firebase] Firebase project ID = <AUTO-RESOLVED>");
+            log.info("[Firebase] Firebase project ID: <AUTO-RESOLVED>");
         }
 
         FirebaseOptions options = optionsBuilder.build();
@@ -80,30 +80,36 @@ public class FirebaseConfig {
         FirebaseApp app;
         if (FirebaseApp.getApps().isEmpty()) {
             app = FirebaseApp.initializeApp(options);
-            log.info("[Firebase] ✔ FirebaseApp initialized: {}", app.getName());
+            log.info("[Firebase] ✔ FirebaseApp initialized successfully: {}", app.getName());
         } else {
             app = FirebaseApp.getInstance();
             log.info("[Firebase] ✔ FirebaseApp already initialized, reusing existing instance.");
         }
 
-        log.info("[Firebase] ✔ Firebase Admin SDK Ready — FirebaseMessaging bean available.");
+        log.info("[Firebase] ✔ Firebase Admin SDK Ready — FirebaseMessaging bean active.");
         log.info("[Firebase] ═══════════════════════════════════════════════");
 
         return FirebaseMessaging.getInstance(app);
     }
 
     /**
-     * Resolves GoogleCredentials safely from Base64 env var, JSON env var, file system, or classpath.
+     * Resolves GoogleCredentials with strict priority order:
+     * 1. FIREBASE_SERVICE_ACCOUNT_BASE64
+     * 2. FIREBASE_SERVICE_ACCOUNT_JSON
+     * 3. Local filesystem path
+     * 4. Local classpath resource
      */
     private GoogleCredentials resolveCredentials() throws IOException {
         // ── 1. Priority 1: FIREBASE_SERVICE_ACCOUNT_BASE64 (Render / Production) ──
-        String rawBase64 = getServiceAccountBase64String();
-        if (rawBase64 != null && !rawBase64.trim().isEmpty()) {
-            String cleanedBase64 = rawBase64.trim();
+        String base64Env = getEffectiveBase64();
+        if (base64Env != null && !base64Env.isBlank()) {
+            String cleanedBase64 = base64Env.trim();
+            // Remove wrapping quotes if present
             if ((cleanedBase64.startsWith("'") && cleanedBase64.endsWith("'")) ||
                 (cleanedBase64.startsWith("\"") && cleanedBase64.endsWith("\""))) {
                 cleanedBase64 = cleanedBase64.substring(1, cleanedBase64.length() - 1).trim();
             }
+            // Strip any internal whitespace/newlines
             cleanedBase64 = cleanedBase64.replaceAll("\\s+", "");
 
             try {
@@ -116,22 +122,22 @@ public class FirebaseConfig {
 
                 try (InputStream stream = new ByteArrayInputStream(decodedJson.getBytes(StandardCharsets.UTF_8))) {
                     GoogleCredentials credentials = GoogleCredentials.fromStream(stream);
-                    log.info("[Firebase] Firebase credentials source = ENV_BASE64");
+                    log.info("[Firebase] Credentials source: ENV_BASE64");
                     return credentials;
                 }
             } catch (IllegalArgumentException ex) {
                 log.error("[Firebase] Failed to Base64 decode FIREBASE_SERVICE_ACCOUNT_BASE64: {}", ex.getMessage());
-                throw new IllegalStateException("[Firebase] Invalid Base64 string provided in FIREBASE_SERVICE_ACCOUNT_BASE64.", ex);
+                throw new IllegalStateException("[Firebase] Invalid Base64 format in FIREBASE_SERVICE_ACCOUNT_BASE64.", ex);
             } catch (IOException ex) {
-                log.error("[Firebase] Failed to parse decoded Firebase JSON from Base64: {}", ex.getMessage());
+                log.error("[Firebase] Failed to parse Firebase credentials from decoded Base64 JSON: {}", ex.getMessage());
                 throw new IllegalStateException("[Firebase] Decoded Base64 content is not valid Firebase service account JSON.", ex);
             }
         }
 
-        // ── 2. Priority 2: FIREBASE_SERVICE_ACCOUNT_JSON (Raw JSON fallback) ──
-        String rawJson = getServiceAccountJsonString();
-        if (rawJson != null && !rawJson.trim().isEmpty()) {
-            String trimmedJson = rawJson.trim();
+        // ── 2. Priority 2: FIREBASE_SERVICE_ACCOUNT_JSON (Raw JSON Fallback) ──
+        String jsonEnv = getEffectiveJson();
+        if (jsonEnv != null && !jsonEnv.isBlank()) {
+            String trimmedJson = jsonEnv.trim();
             if ((trimmedJson.startsWith("'") && trimmedJson.endsWith("'")) ||
                 (trimmedJson.startsWith("\"") && trimmedJson.endsWith("\"") && trimmedJson.contains("{"))) {
                 trimmedJson = trimmedJson.substring(1, trimmedJson.length() - 1).trim();
@@ -142,21 +148,20 @@ public class FirebaseConfig {
 
             try (InputStream stream = new ByteArrayInputStream(trimmedJson.getBytes(StandardCharsets.UTF_8))) {
                 GoogleCredentials credentials = GoogleCredentials.fromStream(stream);
-                log.info("[Firebase] Firebase credentials source = ENV_JSON");
+                log.info("[Firebase] Credentials source: ENV_JSON");
                 return credentials;
             } catch (Exception ex) {
-                log.error("[Firebase] Failed to parse Firebase service account JSON from environment variable: {}", ex.getMessage());
-                throw new IllegalStateException("[Firebase] Invalid FIREBASE_SERVICE_ACCOUNT_JSON provided in environment variables.", ex);
+                log.warn("[Firebase] Could not parse raw FIREBASE_SERVICE_ACCOUNT_JSON: {}. Trying local fallbacks...", ex.getMessage());
             }
         }
 
         // ── 3. Priority 3: Local File Path (Mounted secret file / Local development) ──
-        if (serviceAccountPath != null && !serviceAccountPath.trim().isEmpty()) {
+        if (serviceAccountPath != null && !serviceAccountPath.isBlank()) {
             Path jsonPath = Paths.get(serviceAccountPath.trim()).toAbsolutePath();
             if (Files.exists(jsonPath)) {
                 try (InputStream stream = new FileInputStream(jsonPath.toFile())) {
                     GoogleCredentials credentials = GoogleCredentials.fromStream(stream);
-                    log.info("[Firebase] Firebase credentials source = LOCAL_FILE");
+                    log.info("[Firebase] Credentials source: LOCAL_FILE ({})", jsonPath.getFileName());
                     return credentials;
                 } catch (IOException ex) {
                     log.error("[Firebase] Failed to read Service Account JSON file at {}: {}", jsonPath, ex.getMessage());
@@ -169,47 +174,47 @@ public class FirebaseConfig {
         try (InputStream cpStream = getClass().getClassLoader().getResourceAsStream("firebase/firebase-service-account.json")) {
             if (cpStream != null) {
                 GoogleCredentials credentials = GoogleCredentials.fromStream(cpStream);
-                log.info("[Firebase] Firebase credentials source = LOCAL_FILE");
+                log.info("[Firebase] Credentials source: LOCAL_FILE (classpath:firebase/firebase-service-account.json)");
                 return credentials;
             }
         } catch (Exception ignored) {
             // fallback failed
         }
 
-        // ── 5. Error if no credentials found ──
-        log.error("[Firebase] Firebase service account credentials: NOT CONFIGURED");
+        // ── 5. Error if no credentials could be resolved ──
+        log.error("[Firebase] Credentials source: NONE - No valid credentials found");
         throw new IllegalStateException(
             "[Firebase] Service Account credentials not found. " +
             "Please provide FIREBASE_SERVICE_ACCOUNT_BASE64 as an environment variable (for Render/production) " +
             "or place firebase-service-account.json at " + serviceAccountPath + " (for local development).");
     }
 
-    private String getServiceAccountBase64String() {
-        if (serviceAccountBase64 != null && !serviceAccountBase64.trim().isEmpty()) {
-            return serviceAccountBase64;
-        }
+    private String getEffectiveBase64() {
         String env = System.getenv("FIREBASE_SERVICE_ACCOUNT_BASE64");
-        if (env != null && !env.trim().isEmpty()) {
+        if (env != null && !env.isBlank()) {
             return env;
         }
         String prop = System.getProperty("FIREBASE_SERVICE_ACCOUNT_BASE64");
-        if (prop != null && !prop.trim().isEmpty()) {
+        if (prop != null && !prop.isBlank()) {
             return prop;
+        }
+        if (serviceAccountBase64 != null && !serviceAccountBase64.isBlank()) {
+            return serviceAccountBase64;
         }
         return null;
     }
 
-    private String getServiceAccountJsonString() {
-        if (serviceAccountJson != null && !serviceAccountJson.trim().isEmpty()) {
-            return serviceAccountJson;
-        }
+    private String getEffectiveJson() {
         String env = System.getenv("FIREBASE_SERVICE_ACCOUNT_JSON");
-        if (env != null && !env.trim().isEmpty()) {
+        if (env != null && !env.isBlank()) {
             return env;
         }
         String prop = System.getProperty("FIREBASE_SERVICE_ACCOUNT_JSON");
-        if (prop != null && !prop.trim().isEmpty()) {
+        if (prop != null && !prop.isBlank()) {
             return prop;
+        }
+        if (serviceAccountJson != null && !serviceAccountJson.isBlank()) {
+            return serviceAccountJson;
         }
         return null;
     }
